<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">凹凸漫</string>
    <string name="action_settings">Settings</string>

    
    <string name="no_data">暂无数据</string>
    <string name="get_nothing">未搜索到相关内容</string>
    <string name="no_connect_hint">网络连接失败，建议稍后重试</string>
    <string name="wait">请稍候...</string>
    <string name="first_featured">精选漫画</string>
    <string name="first_recommend">凹凸推荐</string>
    <string name="first_newest">最新漫画</string>
    <string name="all">全部</string>
    <string name="update_to">更新至</string>
    <string name="hua">话</string> 
    <string name="title_author">作者：</string>
    <string name="update_date">最后更新：</string>
	<string name="title_detail">漫画详情</string>
	<string name="title_score">评分：</string>
	<string name="title_theme">题材：</string>
	<string name="title_process">进程：</string>
	<string name="title_chapter">漫画章节</string>
	<string name="title_category">漫画分类</string>
	<string name="title_shelf">我的书架</string>
	<string name="editor">编辑</string>
	<string name="favor">收藏</string>
	<string name="cancel_fail">取消收藏失败</string>
	<string name="favoring">已收藏</string>
	<string name="favor_fail">收藏失败</string>
	<string name="start_read">开始阅读</string>
	<string name="no_net_hit">无网络，请联网再刷新一下试试:)</string>
	<string name="refresh">刷新</string>
	<string name="loading_list">正在用力加载，请稍候...</string>
	<string name="check_more">查看更多</string>
	<string name="processing">连载中...</string>
	<string name="process_over">已完结</string>
	<string name="loaditem_loading">正在加载...</string>
	<string name="try_again">加载失败，请重试</string>
	<string name="check_all">全选</string>
	<string name="check_all_cancel">取消全选</string>
	<string name="check_delete">删除</string>
	<string name="conmm_cancel">取消</string>
	<string name="conmm_confirm">确定</string>
	<string name="update_chapter">更新到第%1$s话</string>
	<string name="note_exit">再按一次后退键，退出程序</string>
	<string name="red">阅读</string>
	<string name="no_brief">该漫画作者太懒了，简介都没写……</string>
	<string name="no_favor">您还未收藏任何漫画</string>
	<string name="go_home">去首页</string>
</resources>
