<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/detail_head_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_bg"
        android:orientation="vertical"
        android:padding="12dp" >

        <LinearLayout
            android:id="@+id/content_lay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="110dp"
                android:layout_height="140dp"
                android:layout_centerVertical="true"
                android:src="@drawable/default_big_icon" />

            <LinearLayout
                android:id="@+id/text_layout"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/item_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/item_label"
                    android:textSize="20.0sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_author"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/item_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_theme"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/item_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_process"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />

                    <TextView
                        android:id="@+id/tv_process"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/item_label"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/item_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="更新到1话"
                    android:textColor="@color/item_label"
                    android:textSize="14.0sp" />

                <TextView
                    android:id="@+id/favor_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/button2"
                    android:drawableLeft="@drawable/heart"
                    android:text="@string/favoring"
                    android:onClick="onClick"
                    android:gravity="center"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/read_btn"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:background="@drawable/button"
                android:text="@string/start_read"
                android:textColor="@color/white"
                android:onClick="onClick" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#CFCECA"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_brief"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/channel_title"
                android:textSize="14sp" />

            <com.manyanger.ui.widget.InScrollGridView
                android:id="@+id/gv_chapter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:cacheColorHint="#000"
                android:horizontalSpacing="10dp"
                android:listSelector="@color/transparent"
                android:numColumns="3"
                android:verticalSpacing="10dp" >
            </com.manyanger.ui.widget.InScrollGridView>
         </LinearLayout>
    </ScrollView>
    
            <LinearLayout
                android:id="@+id/btn_more_lay"
                android:layout_width="fill_parent"
                android:layout_height="64dp"
                android:background="#B7AFA4"
                android:gravity="center"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btn_more"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/more_chapter"
                    android:onClick="onClick"
                    android:text="@string/check_more"
                    android:textColor="@color/white" />
            </LinearLayout>



</LinearLayout>